# ImageClassification

./: .gitignore  README.md  pyproject.toml
notebooks/: El_Bayad_Taha_assignment.ipynb
src/image_classification/: __init__.py  cli.py  data.py  engine.py  infer.py  metrics.py  model.py  plots.py  utils.py
tests/: test_metrics.py  test_model.py
