[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-classification"
version = "0.1.0"
description = "Tiny Fashion-MNIST image classification project extracted from a notebook."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "pillow>=10.0",
  "torch>=2.2",
  "torchvision>=0.17",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.0",
  "pytest>=8.0",
]

[project.scripts]
image-classification-train = "image_classification.cli:main"
image-classification-infer = "image_classification.infer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
